src/client/styles/common.less
@import (reference) './custom.less';
@import (reference) './modules/variables.less';

html {
  height: auto;
}

body {
  overflow-x: hidden;
  height: 100%;
}

#app {
  width: 100%;
  height: 100%;
}

a:focus {
  text-decoration: none;
}

.white-bg {
  background: @white;
}

.ant-modal-wrap {
  overflow: auto;
}

.ant-modal-body {
  min-width: 250px;
}

.content {
  margin-top: 56px;
  width: 100vw;
}

.shifted {
  margin-top: 21px;
}

.text-icon {
  font-size: 15px !important;
  margin-right: 5px;
  vertical-align: -1px;
}

.text-icon-right {
  margin-left: 4px;
  vertical-align: -1px;
}

.ant-layout {
  overflow: visible;
}

.ant-layout-header {
  z-index: @ant-layout-header-z-index !important;
  width: 100vw !important;
}

textarea.ant-input {
  transition: none;
}

.ant-calendar-selected-day .ant-calendar-date {
  background: rgba(0, 0, 0, 0);
}

.ant-input:hover,
.ant-input-number:hover {
  border-color: @orange !important;
}

.nightmode .ant-calendar-selected-day .ant-calendar-date {
  color: @white-smoke;
}

.ant-popover {
  z-index: @ant-popover-mobile-z-index !important;

  @media @medium {
    z-index: @ant-popover-z-index !important;
  }
}

.ant-tooltip {
  z-index: @ant-tooltip-z-index !important;
}

.Notifications__popover-overlay {
  top: 46px !important;
  z-index: @ant-popover-notifications-z-index !important;
  position: fixed;
}

.ant-modal-mask,
.ant-modal-wrap {
  z-index: @ant-modal-z-index;
}

// for when modals are active
body.white-bg .ant-popover {
  z-index: @ant-modal-popover-z-index !important;
}

body.white-bg .ant-tooltip {
  z-index: @ant-modal-tooltip-z-index !important;
}

body.post-modal .primary-modal {
  display: none;
}

.ant-tooltip {
  z-index: 1060;

  &-content {
    font-weight: 500;

    a {
      color: @white;
    }
  }
}

.newStatus {
  text-transform: uppercase;
}

.ant-popover-title {
  color: #9d9d9d;
  line-height: 36px;
  height: 36px;
  border-bottom: @border-width-base @border-style-base @normal-grey;
}

.ant-popover-inner-content {
  max-height: 55vh;
}

.ant-rate {
  color: @boulder !important;

  &:hover {
    color: @boulder !important;
  }
}

video {
  max-width: 100%;
}

.iconfont {
  font-size: 26px;
}

.capitalize-text {
  text-transform: capitalize;

  a {
    text-transform: none;
  }
}

.username {
  color: @black;

  &:hover {
    color: @orange-hot;
  }

  font-weight: 500;
}

iframe {
  border: none;
  height: calc(100% + 2px);
}

.float-right {
  float: right;
}

div[data-dir='rtl'] {
  direction: rtl;
}

.ant-modal-mask {
  background-color: rgba(242, 242, 242, 0.97) !important;
}

.ant-menu,
.ant-select-selection {
  background-color: transparent;
}

.ant-card-loading-block {
  display: inline-block;
  margin: 5px 1% 0;
}

.ant-checkbox-disabled + span {
  color: #7d7d7d;
  cursor: not-allowed;
}

.ant-select-auto-complete.ant-select .ant-select-selection--single {
  height: 32px !important;
}

.ReactModal__Overlay.ReactModal__Overlay--after-open {
  z-index: @react-modal-z-index !important;
}

.Popover__overlay {
  @media @medium-max {
    background-color: @modal-background-color;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    pointer-events: none;
  }
}

.ol,
ul {
  list-style: none;
}

article,
aside,
blockquote,
body,
button,
code,
dd,
details,
div,
dl,
dt,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
hr,
input,
legend,
li,
menu,
nav,
ol,
p,
pre,
section,
td,
textarea,
th,
ul {
  margin: 0;
  padding: 0;
}

.ant-message {
  z-index: @ant-message-z-index !important;
}

.ant-select-dropdown {
  z-index: @ant-modal-popover-z-index !important;
}

.ant-modal-title {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  max-width: 95%;
}

.ant-select-auto-complete.ant-select .ant-select-search--inline {
  margin-top: -2px;
}

// region ant-slider
.ant-slider-track {
  background-color: @orange !important;
}

.ant-slider-handle {
  border-color: @orange !important;

  &:focus {
    border-color: @neon-carrot !important;
    box-shadow: 0 0 0 5px rgba(248, 112, 7, 0.2) !important;
  }
}

.ant-slider-dot-active {
  border-color: @primary-color !important;
}
// endregion

// region ant-tabs
.ant-tabs-nav {
  .ant-tabs-tab-active,
  .ant-tabs-tab:hover {
    color: @primary-color !important;
  }
}

.ant-tabs-ink-bar {
  background-color: @primary-color !important;
}

@import 'common-nightmode';

